home page overflow fixed

--- a/style/home.scss
+++ b/style/home.scss
@@ -1,6 +1,6 @@
 /* Homepage */
 body.home {
-  overflow: hidden;
+  overflow-x: hidden;
   padding: 0;
 }
 
